--- a/restaurants/templates/create.html
+++ b/restaurants/templates/create.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Create</title>
-    </head>
-    <body>
+{% extends "base.html" %}
+
+{% block title %}
+ Form
+{% endblock title %}
+{% block content %}
+
         <form method="POST">
 			{% csrf_token %}
 				{{form.as_p}}
 		<input type="submit" value="Create">
-</form>
-    </body>
-</html>
+        </form>
+
+{% endblock content %}
